# forge

./: .gitignore  .pre-commit-config.yaml  LICENSE  MIGRATION_GUIDE.md  README.md  cookiecutter.json  pyproject.toml
hooks/: README.md  post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  api.py  manage.py  pyproject.toml
{{cookiecutter.project_slug}}/app/: apps.py
{{cookiecutter.project_slug}}/app/admin/: admin.py
{{cookiecutter.project_slug}}/app/api/: README.md  __init__.py  main.py
{{cookiecutter.project_slug}}/app/api/dependencies/: __init__.py  auth.py
{{cookiecutter.project_slug}}/app/api/middleware/: __init__.py  cors.py
{{cookiecutter.project_slug}}/app/api/routers/: auth.py  health.py  users.py
{{cookiecutter.project_slug}}/app/api/schemas/: __init__.py  auth.py  common.py  users.py
{{cookiecutter.project_slug}}/app/db/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/app/domain/: background_task.py
{{cookiecutter.project_slug}}/app/forms/: base.py  fields.py
{{cookiecutter.project_slug}}/app/helpers/: README.md  vite.py
{{cookiecutter.project_slug}}/app/management/commands/: runserver_vite.py
{{cookiecutter.project_slug}}/app/models/: README.md  __init__.py  background_task.py  base.py  permission.py  profile.py  user.py
{{cookiecutter.project_slug}}/app/static/: package.json  tailwind.config.js  vite.config.js
{{cookiecutter.project_slug}}/app/static/css/: pdf.css
{{cookiecutter.project_slug}}/app/static/js/: main.js
{{cookiecutter.project_slug}}/app/tasks/: __init__.py  ping.py
{{cookiecutter.project_slug}}/app/templates/: base.html
{{cookiecutter.project_slug}}/app/templates/widgets/: checkbox.html  errors.html  field.html  file_input.html  help_text.html  multiple_select.html  non_field_errors.html  password_input.html  radio.html  select.html  select_multiple.html  text_input.html  textarea.html
{{cookiecutter.project_slug}}/app/utils/: README.md
{{cookiecutter.project_slug}}/app/views/: ping.py
{{cookiecutter.project_slug}}/config/: asgi.py  base.py  celery.py  custom_template_tag_loader.py  fastapi.py  local.py  production.py  test.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/locale/: README.md
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt  production.txt
{{cookiecutter.project_slug}}/tests/: base.py  conftest.py  test_fastapi.py
{{cookiecutter.project_slug}}/tests/api/: test_sample.py
{{cookiecutter.project_slug}}/tests/factories/: sample.py
{{cookiecutter.project_slug}}/tests/mixins/: sample.py
